# texting_robots

./: Cargo.toml  LICENSE-MIT  README.md  README.tpl  wasi_poc.sh
.github/workflows/: ci.yml
fuzz/: Cargo.toml  README.md  keywords.dict
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  main.rs  minregex.rs  parser.rs  test.rs  test_get_robots_url.rs  test_repcpp.rs
testdata/: aviation-safety.net.robots.txt  cnet.robots.txt  ebay.robots.txt  ipwatchdog.robots.txt  quora.robots.txt  reddit.robots.txt  sgppto.robots.txt  substack.robots.txt  twitter.robots.txt  zillow.robots.txt
tests/: integration_test.rs
