[package]
name = "texting_robots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bstr = "0.2.17"
lazy_static = "1.4.0"
nom = "7.1.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
thiserror = "1.0.30"
url = "2.2.2"