[package]
name = "texting_robots"
authors = ["Stephen Merity <smerity@smerity.com>"]
description = "Texting Robots: A Rust native `robots.txt` parser with thorough unit testing."
homepage = "https://github.com/Smerity/texting_robots"
repository = "https://github.com/Smerity/texting_robots"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["robot", "robots", "parser", "spider", "crawler"]
categories = ["parser-implementations", "parsing", "web-programming"]
exclude = ["/.github", "./testdata", "./fuzz"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bstr = "0.2.17"
lazy_static = "1.4.0"
nom = "7.1.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
thiserror = "1.0.30"
url = "2.2.2"